--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,1 +1,8 @@
-
+.home-background {
+    width: 100%;
+    height: 150px;
+    background-image: url('C:/Users/Mehrshad/Työpöytä/Desktop/Projects/Moayedi-Pharmacy/src/assets/pictures/20250105_184509.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
