putting animation threshold, adding images, tadding SVGs and every description we need, some improvment in responsiveness.

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @font-face {  
-    font-family: 'sahel';  
+    font-family: 'shabnam';  
     src: url('./assets/fonts/sahel/Sahel.ttf') format('truetype');  
     font-weight: normal;  
     font-style: normal;  
